kube/memcache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.test.yaml
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: memcache
  name: memcache
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.test.yaml
        kompose.version: 1.19.0 (f63a961c)
      creationTimestamp: null
      labels:
        io.kompose.service: memcache
    spec:
      containers:
      - image: memcached
        name: memcache
        resources: {}
      restartPolicy: Always
  selector:
    matchLabels:
      io.kompose.service: memcache
status: {}
