kube/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.test.yaml
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: minio
  name: minio
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.test.yaml
        kompose.version: 1.19.0 (f63a961c)
      creationTimestamp: null
      labels:
        io.kompose.service: minio
    spec:
      containers:
      - args:
        - server
        - /data
        image: minio/minio
        name: minio
        ports:
        - containerPort: 9000
        resources: {}
      restartPolicy: Always
  selector:
    matchLabels:
      io.kompose.service: minio
status: {}
