kube/memcache-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.test.yaml
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: memcache
  name: memcache
spec:
  ports:
  - name: "11211"
    port: 11211
    targetPort: 11211
  selector:
    io.kompose.service: memcache
status:
  loadBalancer: {}
