kube/loadbalancer.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: df2-client
          servicePort: 80
      - path: /api
        backend:
          serviceName: df2-server
          servicePort: 4201
